# CloudHarvestCLI

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  config.py  docker-compose.yaml  harvest.template.sh  harvest.yaml  launch.sh  meta.json  publish.sh  pyproject.toml  requirements.txt  setup.py  start-standalone.sh  start.sh
CloudHarvestCLI/: __main__.py  __register__.py  api.py  app.py  banner.py  configuration.py  credentials.py  exceptions.py  messages.py  meta.json  meta.py  plugins.py  processes.py  pyproject.toml
CloudHarvestCLI/commands/: __init__.py  base.py
CloudHarvestCLI/commands/arguments/: completers.py  parts.py
CloudHarvestCLI/commands/attach/: arguments.py  commandset.py
CloudHarvestCLI/commands/banner/: __init__.py  arguments.py  commandset.py  completers.py
CloudHarvestCLI/commands/cache/: __init__.py  arguments.py  commandset.py  completers.py
CloudHarvestCLI/commands/harvest/: arguments.py  commandset.py  completers.py
CloudHarvestCLI/commands/jobs/: __init__.py  arguments.py  commandset.py  completers.py
CloudHarvestCLI/commands/jobs/attach/: __init__.py  arguments.py  commandset.py
CloudHarvestCLI/commands/jobs/terminate/: arguments.py  commandset.py
CloudHarvestCLI/commands/plugin/: __init__.py  arguments.py  commandset.py  completers.py
CloudHarvestCLI/commands/report/: __init__.py  arguments.py  commandset.py  completers.py
CloudHarvestCLI/commands/services/: __init__.py  arguments.py  commandset.py  completers.py
CloudHarvestCLI/commands/settings/: __init__.py  arguments.py  commandset.py
CloudHarvestCLI/commands/settings/banner/: arguments.py  commandset.py  completers.py
CloudHarvestCLI/commands/settings/plugin/: arguments.py  commandset.py
CloudHarvestCLI/commands/settings/theme/: arguments.py  commandset.py
CloudHarvestCLI/commands/theme/: __init__.py  arguments.py  commandset.py  completers.py
CloudHarvestCLI/config/: README.md  api.yaml  banners.yaml  shortcuts.yaml  themes.yaml
CloudHarvestCLI/docs/commands/: cache_map.md  report.md
CloudHarvestCLI/text/: formatting.py  inputs.py  printing.py  styling.py
cloud_harvest_cli/: __main__.py  configuration.py  exceptions.py  messages.py
cloud_harvest_cli/commands/banner/: commandset.py
cloud_harvest_cli/commands/report/: __init__.py  completers.py
cloud_harvest_cli/config/: shortcuts.yaml  themes.yaml
cloud_harvest_cli/docs/commands/: banner.md
cloud_harvest_cli/text/: styling.py
docker/: docker-compose.yaml  docker-entrypoint.sh
harvest/: __main__.py  api.py  app.py  arguments.py  banner.py  configuration.py  messages.py  plugins.py  processes.py  startup.py  text.py
harvest/arguments/: __init__.py  completers.py  core.py  parents.py  parts.py
harvest/commands/: __init__.py  base.py
harvest/commands/arguments/: completers.py  parts.py
harvest/commands/banner/: __init__.py  arguments.py  completers.py
harvest/commands/cache/: __init__.py  arguments.py  commandset.py  completers.py
harvest/commands/report/: __init__.py  arguments.py  commandset.py  completers.py  exceptions.py
harvest/commands/services/: __init__.py  arguments.py  commandset.py  completers.py
harvest/config/: modules.yaml
harvest/docs/commands/: cache_attach.md  cache_collect.md
harvest/text/: formatting.py  printing.py  styling.py
tests/: test_failsafe.py
(+1 files in other folders)
