[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "CloudHarvestApi"
version = "0.1.0"
description = "This is the Command Line Interface for CloudHarvest."
authors = [{name = "Cloud Harvest"}]
readme = "README.md"
homepage = "https://github.com/Cloud-Harvest/CloudHarvestCLI"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Source = "https://github.com/Cloud-Harvest/CloudHarvestCLI"

[project.packages]
include = ["cloud_harvest_cli.*"]
exclude = ["tests", "tests.*"]

[project.scripts]
# Add your scripts here

[project.dependencies]
PyYAML = "*"
cmd2 = "*"
gnureadline = "*"
flatten-json = "*"
natsort = "*"
pandas = "*"
requests = "*"
rich = "*"
rich-argparse = "*"
setuptools = "*"
pytest = "*"
urllib3 = "*"
CloudHarvestCoreTasks = { git = "https://github.com/Cloud-Harvest/CloudHarvestCoreTasks.git" }
CloudHarvestCoreDataModel = { git = "https://github.com/Cloud-Harvest/CloudHarvestCoreDataModel.git" }
