[tool.poetry]
name = "CloudHarvestCLI"
version = "0.1.0"
description = "This is the Command Line Interface for CloudHarvest."
authors = ["Cloud Harvest", "Fiona June Leathers"]
readme = "README.md"
homepage = "https://github.com/Cloud-Harvest/CloudHarvestCLI"
license = "CC Attribution-NonCommercial-ShareAlike 4.0 International"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
Source = "https://github.com/Cloud-Harvest/CloudHarvestCLI"

[tool.poetry.dependencies]
python = "^3.12"
PyYAML = "*"
cmd2 = "*"
gnureadline = "*"
flatten-json = "*"
natsort = "*"
pandas = "*"
requests = "*"
rich = "*"
rich-argparse = "*"
setuptools = "*"
pytest = "*"
toml = "*"
urllib3 = "*"
CloudHarvestCoreTasks = { git = "https://github.com/Cloud-Harvest/CloudHarvestCoreTasks.git" }
CloudHarvestCoreDataModel = { git = "https://github.com/Cloud-Harvest/CloudHarvestCoreDataModel.git" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"